force-app/main/default/objects/Appraisal__c/fields/Product_Type_Addons__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Addons__c</fullName>
    <label>Product Type Addons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As-Repaired Value Addendum</fullName>
            </value>
            <value>
                <fullName>Budget Analysis w/ As-Repaired Value Addendum</fullName>
            </value>
            <value>
                <fullName>Comparable Sales History</fullName>
            </value>
            <value>
                <fullName>Estimated Monthly Rent Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>