force-app/main/default/objects/Appraisal__c/fields/Property_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset_Id__c</fullName>
    <description>Asset ID of the related Property</description>
    <inlineHelpText>Asset ID of the related Property</inlineHelpText>
    <label>Property Asset Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>