force-app/main/default/objects/Appraisal__c/fields/PSI_URL_1__c.field-meta.xml
<CustomField>
    <fullName>PSI_URL_1__c</fullName>
    <description>EBI PSI URL 1</description>
    <inlineHelpText>EBI PSI URL 1</inlineHelpText>
    <label>EBI PSI URL 1</label>
    <type>Url</type>
</CustomField>