force-app/main/default/objects/Appraisal__c/fields/PSI_URL_2__c.field-meta.xml
<CustomField>
    <fullName>PSI_URL_2__c</fullName>
    <description>EBI PSI URL 2</description>
    <inlineHelpText>EBI PSI URL 2</inlineHelpText>
    <label>EBI PSI URL 2</label>
    <type>Url</type>
</CustomField>