force-app/main/default/objects/Appraisal__c/fields/RDNSMP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RDNSMP_Due_Date__c</fullName>
    <description>EBI RDNSMP Due Date</description>
    <inlineHelpText>EBI RDNSMP Due Date</inlineHelpText>
    <label>EBI RDNSMP Due Date</label>
    <type>Date</type>
</CustomField>