force-app/main/default/objects/Appraisal__c/fields/RDNSMP_Report_Manager__c.field-meta.xml
<CustomField>
    <fullName>RDNSMP_Report_Manager__c</fullName>
    <description>EBI RDNSMP Report Manager</description>
    <inlineHelpText>EBI RDNSMP Report Manager</inlineHelpText>
    <label>EBI RDNSMP Report Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>