force-app/main/default/objects/Appraisal__c/fields/RDNSMP_Report_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>RDNSMP_Report_Manager_Email__c</fullName>
    <description>EBI RDNSMP Report Manager Email</description>
    <inlineHelpText>EBI RDNSMP Report Manager Email</inlineHelpText>
    <label>EBI RDNSMP Report Manager Email</label>
    <type>Email</type>
</CustomField>