force-app/main/default/objects/Appraisal__c/fields/RDNSMP_URL_1__c.field-meta.xml
<CustomField>
    <fullName>RDNSMP_URL_1__c</fullName>
    <description>EBI RDNSMP URL 1</description>
    <inlineHelpText>EBI RDNSMP URL 1</inlineHelpText>
    <label>EBI RDNSMP URL 1</label>
    <type>Url</type>
</CustomField>