force-app/main/default/objects/Appraisal__c/fields/Reviewed_Appraisal_After_Repair_Value__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Appraisal_After_Repair_Value__c</fullName>
    <description>Appraised After Repair Value from the Appraisal being reviewed</description>
    <formula>Appraisal_Reviewed__r.Appraised_After_Repair_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Appraised After Repair Value from the Appraisal being reviewed</inlineHelpText>
    <label>Reviewed Appraisal After Repair Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>