force-app/main/default/objects/Appraisal__c/fields/Reviewed_Appraisal_As_Is_Value__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Appraisal_As_Is_Value__c</fullName>
    <description>Appraised As-Is Value from the Appraisal being reviewed</description>
    <formula>Appraisal_Reviewed__r.Appraised_Value_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Appraised As-Is Value from the Appraisal being reviewed</inlineHelpText>
    <label>Reviewed Appraisal As-Is Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>