force-app/main/default/objects/Appraisal__c/fields/Rush_Order__c.field-meta.xml
<CustomField>
    <fullName>Rush_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Appraisal Order was a Rush Order</description>
    <label>Rush Order</label>
    <type>Checkbox</type>
</CustomField>