force-app/main/default/objects/Appraisal__c/fields/Special_Flood_Hazard_Area__c.field-meta.xml
<CustomField>
    <fullName>Special_Flood_Hazard_Area__c</fullName>
    <description>Indicates if this Property is located in a FEMA Special Flood Hazard Area</description>
    <inlineHelpText>Indicates if this Property is located in a FEMA Special Flood Hazard Area</inlineHelpText>
    <label>Special Flood Hazard Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>