force-app/main/default/objects/Appraisal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Appraisal Order</description>
    <inlineHelpText>Status of the Appraisal Order</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Order</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Ordered - Appraiser Accepted</fullName>
            </value>
            <value>
                <fullName>With Vendor</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Vendor Complete</fullName>
            </value>
            <value>
                <fullName>Inspection Scheduled</fullName>
            </value>
            <value>
                <fullName>Inspection Complete</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Revision Required</fullName>
            </value>
            <value>
                <fullName>Revision Sent</fullName>
            </value>
            <value>
                <fullName>Revision Received</fullName>
            </value>
            <value>
                <fullName>In Revision</fullName>
            </value>
            <value>
                <fullName>Reviewed - Remargin Required</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Reassignment Required</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Complete-Delivered</fullName>
            </value>
            <value>
                <fullName>Complete-Undelivered</fullName>
            </value>
            <value>
                <fullName>Verbal Pending Final</fullName>
            </value>
            <value>
                <fullName>Other Pending Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>