force-app/main/default/objects/Appraisal__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <description>A longer description of the Status</description>
    <inlineHelpText>A longer description of the Status</inlineHelpText>
    <label>Status Description</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>