force-app/main/default/objects/Appraisal__c/fields/This_Appraisal_is_Made__c.field-meta.xml
<CustomField>
    <fullName>This_Appraisal_is_Made__c</fullName>
    <label>This Appraisal is Made</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS IS</fullName>
            </value>
            <value>
                <fullName>As-Is Only</fullName>
            </value>
            <value>
                <fullName>As-Is w/ARV</fullName>
            </value>
            <value>
                <fullName>AS IS/ARV</fullName>
            </value>
            <value>
                <fullName>AS REPAIR</fullName>
            </value>
            <value>
                <fullName>AS REPAIRED</fullName>
            </value>
            <value>
                <fullName>ARV Only</fullName>
            </value>
            <value>
                <fullName>SUBJECT TO/AS IS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>