force-app/main/default/objects/Appraisal__c/fields/Turn_Time__c.field-meta.xml
<CustomField>
    <fullName>Turn_Time__c</fullName>
    <description>Requested turn time for the Appraisal Report</description>
    <inlineHelpText>Requested turn time for the Appraisal Report</inlineHelpText>
    <label>Turn Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 day</fullName>
            </value>
            <value>
                <fullName>3 day</fullName>
            </value>
            <value>
                <fullName>5 day</fullName>
            </value>
            <value>
                <fullName>7 day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>