force-app/main/default/objects/Appraisal__c/fields/UpdatedPropertyData__c.field-meta.xml
<CustomField>
    <fullName>UpdatedPropertyData__c</fullName>
    <formula>IF(AND(Property__r.Name = Property_Address__c,  Appraised_Value_Amount__c =  Property__r.Appraised_Value_Amount__c) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated Property Data?</label>
    <type>Checkbox</type>
</CustomField>