force-app/main/default/objects/Appraisal__c/fields/Valuation_Provider__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Provider__c</fullName>
    <description>This is the Appraisal/Valuation provider form the completed Appraisal</description>
    <inlineHelpText>This is the Appraisal/Valuation provider form the completed Appraisal</inlineHelpText>
    <label>Valuation Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>