force-app/main/default/objects/Appraisal__c/fields/Valuation_Scope__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Scope__c</fullName>
    <description>Scope of the Valuation (e.g. Interior, Exterior, Desk, Data)</description>
    <inlineHelpText>Scope of the Valuation (e.g. Interior, Exterior, Desk, Data)</inlineHelpText>
    <label>Valuation Scope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>