force-app/main/default/objects/Appraisal__c/fields/Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Type__c</fullName>
    <description>Type of Valuation/Product from the Appraisal Firm</description>
    <inlineHelpText>Type of Valuation/Product from the Appraisal Firm</inlineHelpText>
    <label>Valuation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>