force-app/main/default/objects/Appraisal__c/fields/Vendor_Ordered_From__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Ordered_From__c</fullName>
    <description>This is the Appraisal Vendor that this order was submitted through</description>
    <inlineHelpText>This is the Appraisal Vendor that this order was submitted through</inlineHelpText>
    <label>Vendor Ordered From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal Nation</fullName>
            </value>
            <value>
                <fullName>BBG</fullName>
            </value>
            <value>
                <fullName>Clarocity Valuation Services</fullName>
            </value>
            <value>
                <fullName>Clear Capital</fullName>
            </value>
            <value>
                <fullName>CoreVest Finance</fullName>
            </value>
            <value>
                <fullName>EBI</fullName>
            </value>
            <value>
                <fullName>Individual Licensed Appraiser</fullName>
            </value>
            <value>
                <fullName>Martin Montserrat</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ServiceLink</fullName>
            </value>
            <value>
                <fullName>ServiceLink-Bofi</fullName>
            </value>
            <value>
                <fullName>US RES</fullName>
            </value>
            <value>
                <fullName>Valuation Services AMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>