force-app/main/default/objects/Appraisal__c/fields/Vendor_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Support_Email__c</fullName>
    <description>Email of the Vendor Support Contact</description>
    <inlineHelpText>Email of the Vendor Support Contact</inlineHelpText>
    <label>Vendor Support Email</label>
    <length>75</length>
    <type>Text</type>
</CustomField>