force-app/main/default/objects/Appraisal__c/fields/Vendor_Support_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Support_Name__c</fullName>
    <description>Name of the Vendor Support Contact</description>
    <inlineHelpText>Name of the Vendor Support Contact</inlineHelpText>
    <label>Vendor Support Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>