force-app/main/default/objects/Appraisal__c/fields/Vendor_Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Support_Phone__c</fullName>
    <description>Phone Number for the Vendor Support Contact</description>
    <inlineHelpText>Phone Number for the Vendor Support Contact</inlineHelpText>
    <label>Vendor Support Phone</label>
    <type>Phone</type>
</CustomField>