force-app/main/default/objects/Appraisal__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <label>Year Built</label>
    <length>255</length>
    <type>Text</type>
</CustomField>