force-app/main/default/objects/Appraisal__c/fields/Zoning_Classification__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Classification__c</fullName>
    <label>Zoning Classification</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>