force-app/main/default/objects/Appraisal__c/fields/Zoning_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Compliance__c</fullName>
    <label>Zoning Compliance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>