force-app/main/default/objects/Appraisal__c/fields/Zoning_Description__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Description__c</fullName>
    <label>Zoning Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>