force-app/main/default/objects/Appraisal__c/fields/Zoning_Report_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Report_Delivered_Date__c</fullName>
    <description>EBI Zoning Report Delivered Date</description>
    <inlineHelpText>EBI Zoning Report Delivered Date</inlineHelpText>
    <label>EBI Zoning Report Delivered Date</label>
    <type>Date</type>
</CustomField>