force-app/main/default/objects/Appraisal__c/fields/Zoning_Report_Report_Manager__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Report_Report_Manager__c</fullName>
    <description>EBI Zoning Report Report Manager</description>
    <inlineHelpText>EBI Zoning Report Report Manager</inlineHelpText>
    <label>EBI Zoning Report Report Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>