force-app/main/default/objects/Appraisal__c/fields/Zoning_Report_URL_1__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Report_URL_1__c</fullName>
    <description>EBI Zoning Report URL 1</description>
    <inlineHelpText>EBI Zoning Report URL 1</inlineHelpText>
    <label>EBI Zoning Report URL 1</label>
    <type>Url</type>
</CustomField>