force-app/main/default/objects/Appraisal__c/fields/Zoning_Report_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Report_URL_2__c</fullName>
    <description>EBI Zoning Report URL 2</description>
    <inlineHelpText>EBI Zoning Report URL 2</inlineHelpText>
    <label>EBI Zoning Report URL 2</label>
    <type>Url</type>
</CustomField>