force-app/main/default/objects/Appraisal__c/recordTypes/Appraisal_Review.recordType-meta.xml
<RecordType>
    <fullName>Appraisal_Review</fullName>
    <active>true</active>
    <label>Appraisal Review</label>
</RecordType>