force-app/main/default/objects/Appraisal__c/listViews/Complete_without_a_Deal_Doc.listView-meta.xml
<ListView>
    <fullName>Complete_without_a_Deal_Doc</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Property__c</columns>
    <columns>Appraisal_Product_Ordered__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Appraisal_Due_Date_Time__c</columns>
    <columns>Estimated_Completion_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appraisal_Firm_Transaction_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Vendor_Ordered_From__c</field>
        <operation>equals</operation>
        <value>Clear Capital</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete-Delivered</value>
    </filters>
    <filters>
        <field>Deal_Document__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Appraisal_Product_Ordered__c</field>
        <operation>notEqual</operation>
        <value>ClearVal Plus (Interior PCI),ClearVal Plus (Exterior PCI)</value>
    </filters>
    <label>Complete w/o a Deal Doc - Clear Capital</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>