force-app/main/default/objects/Appraisal__c/listViews/Open_Appraisal_Nation_Orders.listView-meta.xml
<ListView>
    <fullName>Open_Appraisal_Nation_Orders</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Property__c</columns>
    <columns>Appraisal_Product_Ordered__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Estimated_Completion_Date__c</columns>
    <columns>Appraisal_Firm_Transaction_ID__c</columns>
    <columns>Appraisal_Firm_Order_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appraisal_Firm_Transaction_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Vendor_Ordered_From__c</field>
        <operation>equals</operation>
        <value>Appraisal Nation</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Complete-Delivered,Complete-Undelivered</value>
    </filters>
    <filters>
        <field>Prevent_Auto_Refresh__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Appraisal Nation Orders</label>
</ListView>