force-app/main/default/objects/Appraisal__c/listViews/Recent_Appraisals_Uploaded.listView-meta.xml
<ListView>
    <fullName>Recent_Appraisals_Uploaded</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Property__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete-Delivered</value>
    </filters>
    <label>Recent Appraisals Uploaded</label>
</ListView>